--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 <body onload="typeWriter()">
 
 <div class="video_frame">
-    <video autoplay muted loop id="myVideo">
-        <source src="nature-small.mp4" type="video/mp4"> Your browser does not support HTML5 video.
-    </video>
+    <video autoplay muted playsinline loop srcdesk="nature.mp4" srcmob="nature-small.mp4" id="myVideo"></video>
 </div>
 
 <div class="topnav" id="myTopnav" onmouseover="blurBg()" onmouseout="focusBg()">
