--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="style.css">
 <title>Loading Page</title>
 </head>
-<body onload="typeWriter()">
+<body onload="onLoad()">
 
 <div class="video_frame">
     <video autoplay muted playsinline loop srcdesk="nature.mp4" srcmob="nature-small.mp4" id="myVideo"></video>
